Update No major changes, just some preperations for the new parser, which is still unversioned

--- a/installer/vs/installer_wix/package/TestOptionals.wxs
+++ b/installer/vs/installer_wix/package/TestOptionals.wxs
@@ -1,5 +1,6 @@
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
   <Fragment>
+	  <!--This is temporary-->
 	<ComponentGroup Id="TestOptionals" Directory="INSTALLFOLDER">
 		<Component Id="Test" Guid="{A5924F47-2C15-4C15-A35A-B383425A8237}">
 			<File Source="../../../../config.toml" />
